# Lumina

./: .gitignore  LICENSE  README.md  SKILL.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
docs/: INDEX.md  LUMINA_LANG.md  configuration.md  examples.md  getting-started.md  language.md  src.DebugSink.ts.md  src.LLMFunction.ts.md  src.LLMProvider.ts.md  src.LuminaContext.ts.md  src.Sandbox.ts.md  src.SkillBuilder.ts.md  src.index.ts.md  src.skills.default.executable.ts.md  src.skills.default.index.ts.md  src.skills.default.knowledge.ts.md  src.skills.index.ts.md  src.types.ts.md
examples/: debug-local.ts  default-skills.ts  demo.ts  import-policy-and-autoinstall.ts  llm-function-basic.ts  main.lm  main.lumina  types.lm  worker.lm  worker.lumina
examples/guess-game/: Lumina.toml  README.md
examples/guess-game/src/: decision.lm  main.lm  types.lm
examples/ts-daemon/: Lumina.toml
examples/ts-daemon/src/: main.lm
lmc/: __init__.py  __main__.py  cli.py  config.py  project.py
lmc/agents/: base.py  claude_code.py  llm.py
lmc/analyzer/: checker.py  graph.py  resolver.py
lmc/builder/: microservice.py  monolith.py
lmc/compiler/: orchestrator.py  taskgen.py
lmc/parser/: __init__.py  ast_nodes.py  grammar.lark  parser.py  transformer.py
lmc/templates/: module_generate.j2  module_test.j2  system_assemble.j2
src/: DebugSink.ts  LLMFunction.ts  LLMFunctionStore.ts  LLMProvider.ts  LuminaContext.ts  Sandbox.ts  SkillBuilder.ts  index.ts  types.ts
src/skills/default/: executable.ts  index.ts  knowledge.ts  selector.ts
tests/: conftest.py  test_checker.py  test_config.py  test_graph.py  test_parser.py  test_resolver.py
tests/fixtures/valid/: calculator.lm  full_system.lm  math_ops.lm  math_ops.lumina  missing_type.lm  simple_module.lm  simple_type.lm  union_type.lm  with_import.lm  with_import.lumina
ts-game/: .gitignore  Lumina.toml
ts-game/src/: main.lm  types.lm
