[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmc"
version = "0.1.0"
description = "Lumina Master Compiler — Actor Model architecture definition language"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huasushis" }]

dependencies = [
    "lark>=1.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
lumina = "lmc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lmc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
