[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina-lang"
version = "0.1.3"
description = "Actor Model architecture definition language compiler — define systems as actors with JSON message interfaces, let AI agents implement them"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huasushis" }]
keywords = ["actor-model", "code-generation", "llm", "architecture", "dsl", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "lark>=1.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Huasushis/Lumina"
Repository = "https://github.com/Huasushis/Lumina"

[project.scripts]
lumina = "lmc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lmc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
